fixing overflow

--- a/styles.css
+++ b/styles.css
@@ -24,12 +24,13 @@ body {
     font-family: "montserrat", sans-serif;
     background-color: var(--white-color);
 }
-
 nav {
     display: flex;
     justify-content: space-between;
      margin-top: 20px;
      margin-left: 10px;
+     padding-top: 10px;
+     padding-right: 5px;
      background-color: var(--white-color);
 }
 
@@ -61,7 +62,7 @@ nav {
 }
 
 .background-image {
-    width: 100%;
+    width: 99%;
         margin-top: 20px;
 }
 
@@ -114,12 +115,12 @@ margin-left: 30px;
 .offer-container {
     margin-top: 60px;
     padding-top: 15px;
-    width: 100%;
+    width: 92%;
     margin-left: 20px;
 }
 
 .offer-image {
-    width: 100%;
+    width: 85%;
 }
 
 .rating {
@@ -207,11 +208,12 @@ margin-top: 60px;
 
 .time {
     position: absolute;
-    margin-left: 80px;
+    margin-left: 60px;
     margin-top: -25px;
 }
 
 .post-image {
+    width: 95%;
 margin-left: 10px;
 }
 
@@ -291,4 +293,17 @@ margin-left: 10px;
     color: #3D97B4;
 }
 
+.menu-header {
+display: flex;
+    justify-content: space-between;
+     margin-top: 20px;
+     margin-left: 10px;
+}
 
+.menu-logo {
+margin-left: 13px;
+}
+
+.menu-icon {
+    margin-right: 10px;
+}
